--- a/_config.yml
+++ b/_config.yml
@@ -4,18 +4,18 @@
 permalink:           pretty
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
-baseurl:             ''
+title:               m1kemu-sec
+tagline:             'A Security-focused blog about things'
+description:         'A Security-focused blog about things'
+url:                 https://m1kemu.github.io
+baseurl:             'https://m1kemu.github.io'
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Mike Music
+  url:               https://twitter.com/m1kemu
+  email:             localhost@localhost.com
 
 # Custom vars
-version:             1.0.0
+version:             0.0.1
