--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title:               m1kemu-sec
 tagline:             'My mostly security-focused thoughts, projects, and rants'
 description:         'My mostly security-focused thoughts, projects, and rants'
 url:                 https://m1kemu.github.io
-baseurl:             ''
+baseurl:             'https://m1kemu.github.io'
 paginate:            5
 
 # About/contact
